fix: ignore npm lifecycle scripts when installing
`npm` runs all lifecycle scripts when running `npm ci`, even when these
scripts are defined higher up in the directory structure. In
`operationnezrouge`, this resulted in failure due to the absence of
`husky` in devDependencies in the `functions` subproject.

--- a/.github/workflows/fireway-migrate.yml
+++ b/.github/workflows/fireway-migrate.yml
@@ -43,10 +43,9 @@ jobs:
         with:
           node-version-file: .tool-versions
           cache: npm
-          cache-dependency-path: ${{ inputs.working-directory }}/package-lock.json
+          cache-dependency-path: package-lock.json
       - name: Install Dependencies
-        run: npm ci
-        working-directory: ${{ inputs.working-directory }}
+        run: npm ci --ignore-scripts
 
       - uses: google-github-actions/auth@v1
         with:
