chore: rename required checks

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -52,8 +52,8 @@ branches:
       required_status_checks:
         strict: false
         contexts:
-          - markdownlint
-          - commitlint
+          - markdownlint lint
+          - Validate PR title
       enforce_admins: true
       required_linear_history: false
       required_conversation_resolution: true
