chore: add an environment variable with the firebase environment on firebase deploy
This is currently used in a script called hooked on the firebase hosting pre-deploy to
check which environment we are currently deploying.

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -56,4 +56,5 @@ jobs:
       - name: Firebase deploy
         run: npx firebase deploy --force
         working-directory: ${{ inputs.working-directory }}
-
+        env:
+          ENVIRONMENT: ${{ inputs.environment }}
