--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -23,7 +23,7 @@ on:
         description: The working directory of the firebase project
         required: false
         type: string
-        default: functions
+        default: '.'
 
 concurrency:
   group: firebase-deploy-${{ inputs.environment }}
@@ -48,9 +48,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci --ignore-scripts
 
-      - uses: google-github-actions/auth@v1
+      - uses: valian-ca/github-workflows/.github/actions/gcp-github-auth@main
         with:
-          workload_identity_provider: projects/${{ inputs.workload-identity-project-number }}/locations/global/workloadIdentityPools/github-pool/providers/github-provider
+          workload-identity-project-number: ${{ inputs.workload-identity-project-number }}
           service_account: ${{ inputs.gcp-service-account }}
 
       - name: Configure firebase environment
