--- a/.github/workflows/pnpm-deploy-firebase.yml
+++ b/.github/workflows/pnpm-deploy-firebase.yml
@@ -75,9 +75,9 @@ jobs:
         if: ${{ !success() && inputs.slack-channel-id != '' }}
         uses: slackapi/slack-github-action@v2.0.0
         with:
-          channel-id: ${{ inputs.slack-channel-id }}
           payload: |
             {
+              "channel": "${{ inputs.slack-channel-id }}",
               "text": "Firebase Deployment Problem (${{ job.status }})",
               "blocks": [
                 {
