--- a/.github/workflows/pnpm-fireway-migrate.yml
+++ b/.github/workflows/pnpm-fireway-migrate.yml
@@ -117,9 +117,9 @@ jobs:
         if: ${{ !success() && inputs.slack-channel-id != '' }}
         uses: slackapi/slack-github-action@v2.0.0
         with:
-          channel-id: ${{ inputs.slack-channel-id }}
           payload: |
             {
+              "channel": "${{ inputs.slack-channel-id }}",
               "text": "Fireway Migration Problem (${{ job.status }})",
               "blocks": [
                 {
