--- a/.github/workflows/fireway-migrate.yml
+++ b/.github/workflows/fireway-migrate.yml
@@ -123,6 +123,7 @@ jobs:
         if: ${{ !success() && inputs.slack-channel-id != '' }}
         uses: slackapi/slack-github-action@v2.0.0
         with:
+          token: ${{ secrets.SLACK_BOT_TOKEN }}
           payload: |
             {
               "channel": "${{ inputs.slack-channel-id }}",
@@ -153,5 +154,3 @@ jobs:
                 }
               ]
             }
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
