--- a/.github/workflows/pnpm-fireway-migrate.yml
+++ b/.github/workflows/pnpm-fireway-migrate.yml
@@ -117,6 +117,7 @@ jobs:
         if: ${{ !success() && inputs.slack-channel-id != '' }}
         uses: slackapi/slack-github-action@v2.0.0
         with:
+          token: ${{ secrets.SLACK_BOT_TOKEN }}
           payload: |
             {
               "channel": "${{ inputs.slack-channel-id }}",
@@ -147,5 +148,3 @@ jobs:
                 }
               ]
             }
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
