fix: add missing Slack API method to send failure notification
This commit fixes an error when a workflow fails and tries to notify
Slack:

> SlackError: Missing input! A method must be decided to use the token
  provided.

See: https://github.com/slackapi/slack-github-action?tab=readme-ov-file#technique-2-slack-api-method

--- a/.github/workflows/pnpm-deploy-firebase.yml
+++ b/.github/workflows/pnpm-deploy-firebase.yml
@@ -75,6 +75,7 @@ jobs:
         if: ${{ !success() && inputs.slack-channel-id != '' }}
         uses: slackapi/slack-github-action@v2.0.0
         with:
+          method: chat.postMessage
           token: ${{ secrets.SLACK_BOT_TOKEN }}
           payload: |
             {
