fix: upgrade corepack to get updated npm registry keys
This version of corepack uses the updated npm registry keys, allowing it
to verify signatures of downloaded package managers.

See: https://github.com/nodejs/corepack/issues/612#issuecomment-2618282249

--- a/.github/actions/setup-pnpm/action.yml
+++ b/.github/actions/setup-pnpm/action.yml
@@ -10,13 +10,15 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: corepack enable
-      shell: sh
     - name: Setup node
       uses: actions/setup-node@v4
       with:
         node-version-file: .tool-versions
         cache: 'pnpm'
+    - run: npm install -g corepack@0.31.0
+      shell: sh
+    - run: corepack enable
+      shell: sh
     - run: pnpm install --frozen-lockfile
       shell: sh
       working-directory: ${{ inputs.working-directory }}
