chore: use pnpm/action-setup

--- a/.github/actions/setup-pnpm/action.yml
+++ b/.github/actions/setup-pnpm/action.yml
@@ -10,13 +10,17 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: corepack enable
-      shell: sh
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        run_install: false
+
     - name: Setup node
       uses: actions/setup-node@v4
       with:
         node-version-file: .tool-versions
-        cache: 'pnpm'
+        cache: pnpm
+
     - run: pnpm install --frozen-lockfile
       shell: sh
       working-directory: ${{ inputs.working-directory }}
