chore: set cancel-in-progress: true for firebase deploy

--- a/.github/workflows/pnpm-deploy-firebase.yml
+++ b/.github/workflows/pnpm-deploy-firebase.yml
@@ -43,6 +43,7 @@ jobs:
       id-token: write
     concurrency:
       group: deploy-firebase-${{ inputs.firebase-environment }}-${{ inputs.github-environment }}
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v5
         with:
