--- a/.github/workflows/valian-fireway.yml
+++ b/.github/workflows/valian-fireway.yml
@@ -59,6 +59,7 @@ jobs:
       - name: run migrations ${{ inputs.dry-run && 'in dry run mode' || '' }}
         env:
           GCLOUD_PROJECT: ${{ inputs.gcp-project-id }}
+          GCP_PROJECT: ${{ inputs.gcp-project-id }}
         run: npx @valian/fireway migrate ${{ inputs.dry-run && '--dryRun' || '' }}
         working-directory: ${{ inputs.working-directory }}
 
